<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.scenes.students.StudentsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/btn_griffindor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/selectable_btn"
            android:text="@string/students_griffindor"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_hufflepuff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/selectable_btn"
            android:text="@string/students_hufflepuff"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_ravenclaw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/selectable_btn"
            android:text="@string/students_ravenclaw"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_slytherin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/selectable_btn"
            android:text="@string/students_slytherin"
            android:textAllCaps="false" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_students"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>